Use List.getFirst() instead of get(0) per OpenRewrite